minor touches
